# Wrappyr

./: CMakeLists.txt  README.rst  TODO  TODO.rst  __init__.py  box2d.cpp.tpl  box2d.h.tpl  box2d_ctypes.xml  clang_convert.py  common.tpl  generate_ctypes_api.py  main.cpp  mysql_ctypes.xml  setup.py  test.py  test_box2d.py
ExportHeader/: CMakeLists.txt  ExportHeader.cpp  ExportHeader2.cpp  Makefile  notes
clang_conversion/: export.py  structure.py
ctypes_builder/: README.rst  export.py  generation.py  structure.py
data/: box2d.cpp  box2d.h  box2d_clang.xml  box2d_ctypes.xml  cegui.cpp  cegui.h  cegui_clang.xml  mysql_clang.xml  mysql_ctypes.xml
docs/: Makefile  clang_export_plugin.rst  code_data_conversion.rst  conf.py  creating_package_classes.rst  ctypes_api_generation.rst  ctypes_api_generation_reference.rst  index.rst  introduction.rst  make.bat  memory_management.rst
tests/: test_box2d.py
utils/: str.py
wrappyr/: __init__.py  generate.py
wrappyr/clang_conversion/exports/: __init__.py  ctypes.py  header.py  source.py
wrappyr/clang_conversion/imports/: clang.py
wrappyr/code_data_conversion/: structure.py
wrappyr/code_data_conversion/exports/: __init__.py  ctypes.py  header.py  source.py
wrappyr/code_data_conversion/imports/: clang.py  gccxml.py
wrappyr/ctypes_api_builder/: README.rst  export.py  structure.py  visitors.py
wrappyr/ctypes_api_builder/tests/: mock.c  (+2 more)
wrappyr/ctypes_builder/: export.py  structure.py  visitors.py
wrappyr/runtime/: __init__.py
wrappyr/utils/: MultiDict.py  __init__.py  str.py
wrappyr_runtime/: __init__.py
(+7 files in other folders)
